add button with value

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <h1>CALCULATRICE</h1>
     </div>
 
-    <div class="chiffre">
-        <p id="result"></p>
+    <div class="chiffre rounded">
+        <p class="rounded" id="result"></p>
 
       <div class="container row first">
         <a class="m-2 rounded buttonFirst">C</a>
