--- a/index.html
+++ b/index.html
@@ -41,38 +41,35 @@
         <p class="rounded" id="result"></p>
 
       <div class="container row first">
-        <a class="m-2 rounded buttonFirst">C</a>
-        <a class="m-2 rounded buttonFirst">()</a>
-        <a class="m-2 rounded buttonFirst">%</a>
-        <a class="m-2 rounded buttonFirst">/</a>
+        <a class="m-2 rounded buttonFirst">=</a>
       </div>
 
       <div class="container row second">
         <a class="m-2 text-white rounded button">1</a>
         <a class="m-2 text-white rounded button">2</a>
         <a class="m-2 text-white rounded button">3</a>
-        <a class="m-2 rounded buttonFirst">X</a>
+        <a class="m-2 rounded buttonFirst multi">X</a>
       </div>
 
       <div class="container row third">
         <a class="m-2 text-white rounded button">4</a>
         <a class="m-2 text-white rounded button">5</a>
         <a class="m-2 text-white rounded button">6</a>
-        <a class="m-2 rounded buttonFirst">-</a>
+        <a class="m-2 rounded buttonFirst minus">-</a>
       </div>
 
       <div class="container row fourth">
         <a class="m-2 text-white rounded button">7</a>
         <a class="m-2 text-white rounded button">8</a>
         <a class="m-2 text-white rounded button">9</a>
-        <a class="m-2 rounded buttonFirst">+</a>
+        <a class="m-2 rounded buttonFirst add">+</a>
       </div>
 
       <div class="container row fifth">
-        <a class="m-2 rounded buttonFirst">+/-</a>
+        <a class="m-2 rounded buttonFirst suppr">C</a>
         <a class="m-2 text-white rounded button">0</a>
-        <a class="m-2 rounded buttonFirst">,</a>
-        <a class="m-2 rounded buttonFirst">=</a>
+        <a class="m-2 rounded buttonFirst dot">.</a>
+        <a class="m-2 rounded buttonFirst divide">/</a>
       </div>
     </div>
   </div>
