--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <div class="container row fifth">
-        <a class="m-2 rounded buttonFirst" value="C">C</a>
+        <a class="m-2 rounded buttonFirst">C</a>
         <a class="m-2 text-white rounded button">0</a>
         <a class="m-2 rounded buttonFirst dot">.</a>
         <a class="m-2 rounded buttonFirst divide">/</a>
